@@ -102,11 +102,7 @@ public class MirrorMaker {
 
     private static final long SHUTDOWN_TIMEOUT_SECONDS = 60L;
 
-    public static final List<Class<?>> CONNECTOR_CLASSES = Collections.unmodifiableList(
-        Arrays.asList(
-            MirrorSourceConnector.class,
-            MirrorHeartbeatConnector.class,
-            MirrorCheckpointConnector.class));
+    public static final List<Class<?>> CONNECTOR_CLASSES = List.of(MirrorSourceConnector.class, MirrorHeartbeatConnector.class, MirrorCheckpointConnector.class);
 
     private final Map<SourceAndTarget, Herder> herders = new HashMap<>();
     private CountDownLatch startLatch;
